--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
 
     - name: Pack AnyKernel3 ZIP
       run: |
-        cp -f Kernel/out/target/product/a15/obj/KERNEL_OBJ/kernel-5.10/arch/arm64/boot/Image.gz ./AnyKernel3/
+        cp -f Kernel/out/target/product/a15/obj/KERNEL_OBJ/Image.gz ./AnyKernel3/
         cp -f Kernel/out/target/product/a15/obj/KERNEL_OBJ/*.ko ./AnyKernel3/
         cd AnyKernel3/
         zip -q -r "test.zip" *
