--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,10 +52,12 @@ jobs:
         cp -f Kernel/out/target/product/a15_kor/obj/KERNEL_OBJ/kernel-5.10/arch/arm64/boot/Image.gz ./AnyKernel3/
         cp -f Kernel/out/target/product/a15_kor/obj/KERNEL_OBJ/*.ko ./AnyKernel3/modules/system/lib/modules/
         cd AnyKernel3/
-        zip -r9 test.zip * -x README.md test.zip .git/\* .github/\*
-
+        zip -r9 a155n-kernel.zip * -x README.md a155n-kernel.zip .git/\* .github/\*
+        mkdir -p ../zip
+        mv a155n-kernel.zip ../zip
+        
     - name: Upload AnyKernel3 ZIP
       uses: actions/upload-artifact@v4.3.4
       with:
-        name: test.zip
-        file: AnyKernel3/test.zip
+        name: a155n-kernel.zip
+        file: zip/a155n-kernel.zip
